--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <body>o 
+    <body>
         <h1>Hello world</h1>
         <p>I'm hosted with GitHub Pages.</p>
+        <main>
+            <section id="HELLO">
+
+            </section>
+            <section id="about">
+                
+            </section>
+            <section id="contact">
+                <p>I'm a really awesome llama. Every day I wake up, munch on some grass, do some coding and then go back to sleep.</p>
+            </section>
+
+        </main>
+        <footer>
+            hey
+        </footer>
     </body>
 </html>
